// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TypedSignInfo correctly renders permit sign type 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-10"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving the spender permission to spend this many tokens from your account.
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spending cap
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--margin-left-auto"
          style="max-width: 100%;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
          >
            <div
              class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
            >
              <div
                style="min-width: 0;"
              >
                <div
                  aria-describedby="tippy-tooltip-11"
                  class=""
                  data-original-title="3,000"
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
                    data-testid="simulation-token-value"
                    style="padding-top: 1px; padding-bottom: 1px;"
                  >
                    3,000
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex"
            >
              <div
                class="name name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/question.svg');"
                />
                <p
                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                >
                  0xCcCCc...ccccC
                </p>
              </div>
            </div>
          </div>
          <div
            class="mm-box"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_request-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spender
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 65);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1851"
                    height="16"
                    transform="translate(4.039516030164602 1.5782203519382538) rotate(112.1 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#188CF2"
                    height="16"
                    transform="translate(5.66194575958382 -1.2306431953956085) rotate(470.0 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F2AE02"
                    height="16"
                    transform="translate(2.167526701566883 -11.265379840592708) rotate(458.4 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0x5B38D...eddC4
          </p>
        </div>
      </div>
    </div>
    <div
      style="height: 1px; margin-left: -8px; margin-right: -8px;"
    />
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-12"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(1, 142, 116);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1891"
                    height="16"
                    transform="translate(0.6335263099240563 1.7352552986765108) rotate(129.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F90901"
                    height="16"
                    transform="translate(-5.227286615169763 8.640359200885621) rotate(141.5 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26A02"
                    height="16"
                    transform="translate(10.585940898259892 -4.814122444807073) rotate(339.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0xCcCCc...ccccC
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Signing in with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 59);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#017B8E"
                    height="16"
                    transform="translate(0.39972303467835485 -0.4108005578484912) rotate(317.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F2B602"
                    height="16"
                    transform="translate(-3.7466980184561267 5.704967714142398) rotate(134.1 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FA8E00"
                    height="16"
                    transform="translate(-12.856136345377399 -5.7794405216344416) rotate(364.0 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0x935E7...05477
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_message-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-5 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 32px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <button
        aria-label="collapse-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="sectionCollapseButton"
        style="cursor: pointer; position: absolute; right: 8px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/expand.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypedSignInfo correctly renders permit sign type with no deadline 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-13"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center mm-box--min-width-0"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
          style="white-space: pre-wrap;"
        >
          You're giving the spender permission to spend this many tokens from your account.
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spending cap
          </p>
        </div>
      </div>
      <div
        class="mm-box"
        style="margin-left: auto; max-width: 100%;"
      >
        <div
          class="mm-box mm-box--margin-left-auto"
          style="max-width: 100%;"
        >
          <div
            class="mm-box mm-box--display-flex mm-box--justify-content-flex-end"
          >
            <div
              class="mm-box mm-box--margin-inline-end-1 mm-box--display-inline mm-box--min-width-0"
            >
              <div
                style="min-width: 0;"
              >
                <div
                  aria-describedby="tippy-tooltip-14"
                  class=""
                  data-original-title="3,000"
                  data-tooltipped=""
                  style="display: inline;"
                  tabindex="0"
                >
                  <p
                    class="mm-box mm-text mm-text--body-md mm-text--text-align-center mm-box--padding-inline-2 mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-xl"
                    data-testid="simulation-token-value"
                    style="padding-top: 1px; padding-bottom: 1px;"
                  >
                    3,000
                  </p>
                </div>
              </div>
            </div>
            <div
              class="mm-box mm-box--display-flex"
            >
              <div
                class="name name__missing"
              >
                <span
                  class="mm-box name__icon mm-icon mm-icon--size-md mm-box--display-inline-block mm-box--color-inherit"
                  style="mask-image: url('./images/icons/question.svg');"
                />
                <p
                  class="mm-box mm-text name__value mm-text--body-md mm-box--color-text-default"
                >
                  0xCcCCc...ccccC
                </p>
              </div>
            </div>
          </div>
          <div
            class="mm-box"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_request-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Spender
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 65);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1851"
                    height="16"
                    transform="translate(4.039516030164602 1.5782203519382538) rotate(112.1 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#188CF2"
                    height="16"
                    transform="translate(5.66194575958382 -1.2306431953956085) rotate(470.0 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F2AE02"
                    height="16"
                    transform="translate(2.167526701566883 -11.265379840592708) rotate(458.4 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0x5B38D...eddC4
          </p>
        </div>
      </div>
    </div>
    <div
      style="height: 1px; margin-left: -8px; margin-right: -8px;"
    />
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-15"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(1, 142, 116);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1891"
                    height="16"
                    transform="translate(0.6335263099240563 1.7352552986765108) rotate(129.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F90901"
                    height="16"
                    transform="translate(-5.227286615169763 8.640359200885621) rotate(141.5 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26A02"
                    height="16"
                    transform="translate(10.585940898259892 -4.814122444807073) rotate(339.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0xCcCCc...ccccC
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Signing in with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 59);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#017B8E"
                    height="16"
                    transform="translate(0.39972303467835485 -0.4108005578484912) rotate(317.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F2B602"
                    height="16"
                    transform="translate(-3.7466980184561267 5.704967714142398) rotate(134.1 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FA8E00"
                    height="16"
                    transform="translate(-12.856136345377399 -5.7794405216344416) rotate(364.0 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0x935E7...05477
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_message-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-5 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 32px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <button
        aria-label="collapse-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="sectionCollapseButton"
        style="cursor: pointer; position: absolute; right: 8px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/expand.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypedSignInfo does not render if required data is not present in the transaction 1`] = `<div />`;

exports[`TypedSignInfo renders origin for typed sign data request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
    style="display: flex; align-items: center; justify-content: space-between;"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-1"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Unavailable
    </p>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_request-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-2"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(1, 142, 116);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1891"
                    height="16"
                    transform="translate(0.6335263099240563 1.7352552986765108) rotate(129.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F90901"
                    height="16"
                    transform="translate(-5.227286615169763 8.640359200885621) rotate(141.5 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26A02"
                    height="16"
                    transform="translate(10.585940898259892 -4.814122444807073) rotate(339.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0xCcCCc...ccccC
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Signing in with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(250, 58, 0);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#18CDF2"
                    height="16"
                    transform="translate(-0.52419675189697 -1.6521420347302493) rotate(328.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#035E56"
                    height="16"
                    transform="translate(-9.149230854416022 5.2962309358743) rotate(176.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26602"
                    height="16"
                    transform="translate(8.333921009111961 -7.102569861498541) rotate(468.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            Test Account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_message-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-5 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 32px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <button
        aria-label="collapse-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="sectionCollapseButton"
        style="cursor: pointer; position: absolute; right: 8px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/expand.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypedSignInfo should render message for typed sign v3 request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
    style="display: flex; align-items: center; justify-content: space-between;"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-3"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Unavailable
    </p>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_request-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-4"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(1, 142, 116);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1891"
                    height="16"
                    transform="translate(0.6335263099240563 1.7352552986765108) rotate(129.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F90901"
                    height="16"
                    transform="translate(-5.227286615169763 8.640359200885621) rotate(141.5 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26A02"
                    height="16"
                    transform="translate(10.585940898259892 -4.814122444807073) rotate(339.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0xCcCCc...ccccC
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Signing in with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(200, 20, 59);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#017B8E"
                    height="16"
                    transform="translate(0.39972303467835485 -0.4108005578484912) rotate(317.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F2B602"
                    height="16"
                    transform="translate(-3.7466980184561267 5.704967714142398) rotate(134.1 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#FA8E00"
                    height="16"
                    transform="translate(-12.856136345377399 -5.7794405216344416) rotate(364.0 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0x935E7...05477
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_message-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-5 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 32px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <button
        aria-label="collapse-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="sectionCollapseButton"
        style="cursor: pointer; position: absolute; right: 8px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/expand.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TypedSignInfo should render message for typed sign v4 request 1`] = `
<div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation__simulation_section"
    style="display: flex; align-items: center; justify-content: space-between;"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Estimated changes
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-5"
              class=""
              data-original-title="Estimated changes are what might happen if you go through with this transaction. This is just a prediction, not a guarantee."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <p
      class="mm-box mm-text mm-text--body-md mm-box--color-text-default"
    >
      Unavailable
    </p>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_request-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Request from
          </p>
          <div>
            <div
              aria-describedby="tippy-tooltip-6"
              class=""
              data-original-title="This is the site asking for your signature."
              data-tooltipped=""
              style="display: flex;"
              tabindex="0"
            >
              <span
                class="mm-box mm-icon mm-icon--size-sm mm-box--margin-left-1 mm-box--display-inline-block mm-box--color-icon-muted"
                style="mask-image: url('./images/icons/question.svg');"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--gap-2 mm-box--flex-wrap-wrap mm-box--align-items-center"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-box--color-inherit"
        >
          metamask.github.io
        </p>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Interacting with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(1, 142, 116);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#FB1891"
                    height="16"
                    transform="translate(0.6335263099240563 1.7352552986765108) rotate(129.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F90901"
                    height="16"
                    transform="translate(-5.227286615169763 8.640359200885621) rotate(141.5 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26A02"
                    height="16"
                    transform="translate(10.585940898259892 -4.814122444807073) rotate(339.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            0xCcCCc...ccccC
          </p>
        </div>
      </div>
    </div>
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-2 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-row mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative; background: transparent;"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start mm-box--color-text-default"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Signing in with
          </p>
        </div>
      </div>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--align-items-center"
        >
          <div
            class="mm-box mm-text mm-avatar-base mm-avatar-base--size-xs mm-avatar-account mm-text--body-xs mm-text--text-transform-uppercase mm-box--display-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-text-default mm-box--background-color-background-alternative mm-box--rounded-full mm-box--border-color-transparent box--border-style-solid box--border-width-1"
          >
            <div
              class="mm-avatar-account__jazzicon"
            >
              <div
                style="border-radius: 50px; overflow: hidden; padding: 0px; margin: 0px; width: 16px; height: 16px; display: inline-block; background: rgb(250, 58, 0);"
              >
                <svg
                  height="16"
                  width="16"
                  x="0"
                  y="0"
                >
                  <rect
                    fill="#18CDF2"
                    height="16"
                    transform="translate(-0.52419675189697 -1.6521420347302493) rotate(328.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#035E56"
                    height="16"
                    transform="translate(-9.149230854416022 5.2962309358743) rotate(176.2 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                  <rect
                    fill="#F26602"
                    height="16"
                    transform="translate(8.333921009111961 -7.102569861498541) rotate(468.9 8 8)"
                    width="16"
                    x="0"
                    y="0"
                  />
                </svg>
              </div>
            </div>
          </div>
          <p
            class="mm-box mm-text mm-text--body-md mm-box--margin-left-2 mm-box--color-inherit"
            data-testid="confirm-info-row-display-name"
          >
            Test Account
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mm-box mm-box--margin-bottom-4 mm-box--padding-2 mm-box--background-color-background-default mm-box--rounded-md"
    data-testid="confirmation_message-section"
  >
    <div
      class="mm-box confirm-info-row mm-box--margin-top-2 mm-box--margin-bottom-2 mm-box--padding-right-5 mm-box--padding-left-2 mm-box--display-flex mm-box--flex-direction-column mm-box--flex-wrap-wrap mm-box--justify-content-space-between mm-box--align-items-flex-start mm-box--color-text-default mm-box--rounded-lg"
      style="overflow-wrap: anywhere; min-height: 24px; position: relative;"
    >
      <button
        aria-label="copy-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        style="cursor: pointer; position: absolute; right: 32px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/copy.svg');"
        />
      </button>
      <button
        aria-label="collapse-button"
        class="mm-box mm-button-icon mm-button-icon--size-sm mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-icon-muted mm-box--background-color-transparent mm-box--rounded-lg"
        data-testid="sectionCollapseButton"
        style="cursor: pointer; position: absolute; right: 8px; top: 4px;"
      >
        <span
          class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
          style="mask-image: url('./images/icons/expand.svg');"
        />
      </button>
      <div
        class="mm-box mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--align-items-flex-start"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--align-items-center"
        >
          <p
            class="mm-box mm-text mm-text--body-md-medium mm-box--color-inherit"
          >
            Message
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
